<resources>
    <string name="app_name">Guitar Songbook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_search">Search songs</string>
    <string name="menu_chords">Chords</string>
    <string name="menu_songs">Songs</string>
    <string name="menu_songbooks">Song Lists</string>
    <string name="menu_settings">Settings</string>
    <string name="songbook_name">Songbook Name</string>
    <string name="songbook_create">Create</string>
    <string name="songbook_cancel">Cancel</string>
    <string name="songbook_title">Create Songbook</string>
    <string name="songbook_name_error">Name has to have at least 3 characters</string>
    <string name="songbook_errors">Please review errors</string>
    <string name="songbook_success">Songbook created successfully</string>
    <string name="title_activity_song_detail">Song Detail</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_song_edit">Edit song data</string>
    <string name="title_activity_play_song">Song playing</string>
    <string name="name">Name</string>
    <string name="artist">Artist</string>
    <string name="comment">Comment</string>
    <string name="song_playing">Song playing...</string>
    <string name="title_activity_song_list">Songs</string>
    <string name="chord">Akord</string>
    <string name="search_offline_header">On device</string>
    <string name="search_online_header">Online</string>
    <string name="search_hint">Type to search...</string>
    <string name="song_downloaded">Song Downloaded</string>
    <string name="song_already_downloaded">This song is already in your collection</string>
    <string name="undo">UNDO</string>
    <string name="undo_songbook_deletion">Undo songbook deletion</string>
    <string name="undo_song_deletion">Undo song deletion</string>
    <string name="songbooks_delete_dialog">Are you sure you want to delete selected songbooks?</string>
    <string name="options_backup">Backup</string>
    <string name="options_backup_desc">Will generate backup file</string>
    <string name="options_backup_dialog">Will generate backup file</string>
    <string name="options_restore">Restore</string>
    <string name="songs_delete_dialog">Are you sure you want to delete selected songs?</string>
    <string name="added_to_songbook">Successfully added to songbook</string>
    <string name="song_add_to">Add to</string>
    <string name="delete">Detele</string>
    <string name="options_restore_desc">From previously created backup</string>
    <string name="options_import_song">Import Song</string>
    <string name="options_import_song_formats">Supported formats: Json, Agama </string>
    <string name="options_import_songbooks_formats">Supported formats: Json, Agama </string>
    <string name="options_import_songbooks">Import Song List </string>
    <string name="options_file_review">Import NOT successful! Please review that selected file has correct format. </string>
    <string name="options_file_import_success">Import successful!! </string>
    <string name="options_file_name">File name cannot be empty </string>
    <string name="options_backup_name">Backup file name </string>
    <string name="options_backup_errors">There were errors when creating backup </string>
    <string name="options_backup_success">Backup created successfully </string>
    <string name="options_backup_exists">File with given name already exists. Are you sure you want to overwite it? </string>
    <string name="options_ts"> Song text size</string>
    <string name="options_ts_small">Small</string>
    <string name="options_ts_medium">Medium</string>
    <string name="options_ts_large">Large</string>
    <string name="options_ts_unk">Unknown</string>
    <string name="options_ts_dialog">Please select text size for song lyrics</string>
    <string name="undo_song_removal">Undo song removal</string>
    <string name="remove_songs">Are you sure you want to remove selected songs from songbook?</string>
    <string name="options_import_dialog_title">Please select file for import</string>
    <string name="text_speed">Text speed: </string>
    <string name="no_songs">You have no songs downloaded download some from internet via Search songs menu.</string>
    <string name="no_songs_in_sb">There are no songs in this songbook</string>
    <string name="all_songs">This songbook already contains all possible songs</string>
    <string name="no_songbooks">There are currently no songbook available, you create some first </string>

</resources>
