<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_item_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        android:checkable="true"/>

    <item android:id="@+id/menu_item_songbooks"
        android:title="@string/menu_songbooks"
        android:icon="@drawable/ic_clipboard"
        android:checkable="true"/>

    <item android:id="@+id/menu_item_songs"
        android:title="@string/menu_songs"
        android:icon="@drawable/song_note"
        android:checkable="true"/>

    <item android:id="@+id/menu_item_chords"
        android:title="@string/menu_chords"
        android:icon="@drawable/ic_guitar"
        android:checkable="true"/>

    <item android:id="@+id/menu_item_setting"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"
        android:checkable="true"/>

</menu>