<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cz.cvut.fit.nurguitarsongbook.main.songdetail.SongEditActivity"
    tools:showIn="@layout/activity_song_edit">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvnamelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/et_song_name"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/et_song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvnamelabel"/>

        <TextView
            android:id="@+id/tvartistlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/et_song_name"
            android:text="@string/artist"
            android:layout_below="@id/et_song_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_song_artist"
            android:layout_below="@id/tvartistlabel"/>
        <TextView
            android:id="@+id/tvcommentlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/et_song_name"
            android:text="@string/comment"
            android:layout_below="@id/et_song_artist"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_song_comment"
            android:layout_below="@id/tvcommentlabel"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
